--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/angularproject.css">
@@ -18,5 +19,6 @@
 <script src="js/controllers/formInfo.js"></script>
 <script src="js/factories/validateForm.js"></script>
 <script src="js/factories/userFactory.js"></script>
+
 
 </html>
